--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "razorpay": "2.0.7"
   }
 }
